assets/css/style.css
@import 'normalize.css';

:root {
	font-size: 62.5%; /* 16px font size rem conversion*/
}
body {
	margin:0;
	padding:0;
	text-align:center;
	color:#3b4954;
	background:#f9fbfd;
	font-size: 1.6rem; /* 16px font size rem conversion*/
	font-family: 'Lato', sans-serif;
}
.clear {
	clear:both;
}
.hidden {
	display:none;
}
.show {
	display:inline-block;
}
.nav_wrapper, .main_wrapper, .footer_wrapper {
	display:inline-block;
	width:100%;
	margin:0 auto;
	min-width:480px;
	max-width:1080px;
}
@media only screen and (min-width: 1080px)  {
	.nav_wrapper, .main_wrapper {
		width:1080px;
	}
}
footer {
	background: #fff;
}
.footer_wrapper {
	font-size:1.4rem;
}
.nav_wrapper {
	color:#555;
	margin-bottom:10px;
	margin-top:11px;
}
.nav_content {
	font-size:1.4rem;
}
.nav_content ul {
	margin:0;
	padding:0;
}
.nav_content ul li {
	list-style-type: none;
	padding:10px 0 10px 0;
	float:left;
	width:200px;
	border-right:1px solid #ddd;
}
.nav_content ul li a {
	text-decoration:none;
	color:#3b4954;
	cursor:pointer;
}
.nav_content ul li a:hover {
	color:#af0808;
}
.main_wrapper {
	margin: 0 auto 50px auto;
	background:#fff;
	-webkit-box-shadow: 0px 2px 2px 0px rgba(199,199,199,0.6);
	-moz-box-shadow: 0px 2px 2px 0px rgba(199,199,199,0.6);
	box-shadow: 0px 2px 2px 0px rgba(199,199,199,0.6);
}
.main_content {
	text-align:left;
	margin:30px;
	padding-bottom: 50px;
}
.main_content h1 {
	font-size: 1.8em;
    text-align: center;
	margin: 40px 0 30px 0;
}
#agendaWrapper {
	width:100%;
}
#agendaWrapper a:hover {
	cursor:pointer;
}
h1, #clock, #weather, #city, #weather_image {
    cursor: default;
}
#clock {
    margin: 13px 0 0 0;
    padding: 0px 0px 0px 12px;
	float:right;
}
#weather {
    margin: 13px 0 0 0;
    padding: 0 12px 0 0px;
    float: right;
    border-right: 1px solid #ddd;
}
#weather_image {
	margin: 13px 0 0 0;
    padding: 0 12px 0 0px;
    float: right;
}
#city {
	margin: 13px 0 0 0;
    padding: 0 1px 0 0px;
    float: right;
}
#mode {
	margin-right:5px;
	padding:11px 5px 13px 10px;
	float:right;
	background:none;
	border:none;
}
#day {
	margin-right:5px;
	padding:11px 5px 13px 10px;
	float:right;
	background:none;
	border:none;
}
#dayPrev {
	float:left;
	display:inline;
	text-align:center;
	width:10%;
	opacity:0.15;
	margin-top:-20px;
}
#dayNext {
	float:left;
	display:inline;
	text-align:center;
	width:10%;
	opacity:0.15;
	margin-top:-20px;
}
#agendaTitle {
	float:left;
	width:80%;
	display:inline;
	margin-bottom:12px;
}
h2 {
    text-align: center;
	color: #bbb;
    font-size: 1em;
    font-weight: 400;
    text-transform: uppercase;
	letter-spacing: 0.3rem;
}
h3 {
    margin: 10px 0px;
    padding: 0;
	font-size: 1.2em;
	font-weight:600;
	float:left;
    text-transform: uppercase;
	letter-spacing: 0.4rem;
}
.nav_content h3 a:hover {
	cursor:pointer;
}
.main_content p {
	text-align:center;
	padding: 10px 50px 35px 50px;
}
.button {
	border-radius: 25px;
	padding:12px 25px;
	color:#fff;
	border: 0;
}
.button:focus {
	outline:0;
}
.button:hover {
	cursor:pointer;
}
.button_red {
	background:#d62e2e;
}
.button_green {
	background:#2dac0e;
}
.button_grey {
	float:right;
	text-align:right;
	background:#c0c7cf;
}
#calendar {
	text-align: center;
}
.input_field {
	border: none;
    width: 98%;
    padding: 11px 1%;
}
.input_field_past {
	background:rgb(250, 250, 249);
	color:rgb(183, 183, 183);
}
#calendar .hour_wrapper:last-child .input { border-bottom:1px solid #ddd;}
.hour_wrapper {
	display:block;
	float:left;
	width:100%;
	margin: 0;
	min-width:422px;
}
.input_item {
	padding:11px;
	color: #bbb;
}
.hour {
	float:left;
	width:18%;
	color: #bbb;
}
.hour_num {
	display:inline;
	float:right;
	margin:12px 16% 0 0;
	text-align:right;
}
.hour_num_current {
	color:#00d377;
}
.hour_indicator {
	background:rgb(0, 211, 119);
	border-radius:50%;
}	
.hour_item {
	display:inline;
	float:right;
	padding: 3px;
    margin: 18px 11% 0px 0;
}
.input {
	width:68%;
	float:left;
	border-top:1px solid #ddd;
}
.field {
	padding: 0;
}
.save {
	float:left;
	text-align:center;
	width:14%;
}
.save:hover {
	cursor:pointer;
}
.save:active {
	color:#ddd;
	cursor:wait;
}
.checkWrapper {
	float: left;
    width: 50px;
    height: 30px;
    overflow: hidden;
}
.checkmark {
	width: 104px;
    height: 104px;
    margin: -32px 0 0 -27px;
}
#clearAgenda {
	float: right;
    padding: 13px 2px 12px 2px;
    margin: 0 10px 0px 0;
}
#clearAgenda:hover{
	cursor:pointer;
	color:rgb(187, 0, 0);
}
.lds-ring {
	display: inline;
	position: relative;
	width: 20px;
	height: 20px;
}
.lds-ring div {
	box-sizing: border-box;
	display: block;
	position: absolute;
	width: 20px;
	height: 20px;
	margin: 10px 0 0 14px;
	border: 10px solid rgb(0, 211, 119);
	border-radius: 50%;
	animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
	border-color:rgb(0, 211, 119) transparent transparent transparent;
}
.lds-ring div:nth-child(1) {
	animation-delay: -0.45s;
}
.lds-ring div:nth-child(2) {
	animation-delay: -0.3s;
}
.lds-ring div:nth-child(3) {
	animation-delay: -0.15s;
}
@keyframes lds-ring {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}
/* Flexbox */
.site {
	display: flex;
	flex-direction: column;
	height: 100vh;
}
.site_header,
.site_footer {
	flex: none;
}
.site_content {
	flex: 1 0 auto; 
	padding: var(--space) var(--space) 0;
	width: 100%;
}
.site_content::after {
	content: '\00a0'; /* &nbsp; */
	display: block;
	margin-top: var(--space);
	height: 0px;
	visibility: hidden;
}
@media (--break-lg) {
	.site_content {
		padding-top: var(--space-lg);
	}
	.site_content::after {
		margin-top: var(--space-lg);
	}
}
.site_content--full {
	padding: 0;
}
.site_content--full::after {
	content: none;
}
/* Dark mode toggle */
/* The switch - the box around the slider */
.switch {
    position: relative;
    display: inline-block;
    width: 50px;
    float: left;
    margin-top: 11px;
	height: 23px;
	opacity:0.8;
}
.switch input {
	opacity: 0;
	width: 0;
	height: 0;
}
.slider {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: #ccc;
	-webkit-transition: .4s;
	transition: .4s;
}
.slider:before {
    position: absolute;
    content: "";
    height: 16px;
    width: 17px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}
input:checked + .slider {
	background-color:#50b748;
}
input:focus + .slider {
	box-shadow: 0 0 1px #50b748;
}
input:checked + .slider:before {
	-webkit-transform: translateX(26px);
	-ms-transform: translateX(26px);
	transform: translateX(26px);
}
.slider.round {
	border-radius: 18px;
}

.slider.round:before {
	border-radius: 50%;
}

